Update on some stuff; changed serif to Neuton

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,6 +5,8 @@
 <script src="https://use.typekit.net/ouv5tyu.js"></script>
 <script>try{Typekit.load({ async: true });}catch(e){}</script>
 
+<script src="//use.edgefonts.net/neuton:n4,i4.js"></script>
+
 <meta name="description" content="{% if page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}">
 
 
