--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -18,7 +18,7 @@
 
 <br />
 
-  <a href="https://instagram.com/freeingfrancis" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i>&emsp;&#8202;&#8202;@freeingfrancis</a></p>
+  <a href="https://instagram.com/freeingfrancis" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i>&emsp;&#8202;@freeingfrancis</a></p>
 
 </div>
 </div>
