--- a/css/blog.sass
+++ b/css/blog.sass
@@ -61,7 +61,7 @@ h1
 
 h2
   font-size: 40px
-  font-weight: 100
+  font-weight: 300
   color: $titlecolor
   font-family: $sans
 
@@ -69,7 +69,7 @@ h3
   font-size: 15px
   color: $detailcolor
   font-style: italic
-  font-weight: 300
+  font-weight: 400
   font-family: $sans
   line-height: 150%
   margin-bottom: 50px
@@ -82,6 +82,7 @@ h3
   font-family: $sans
   margin-top: -10px
   letter-spacing: 0.5px
+  font-weight: 400
 
 hr
   background-color: #e5e5e5
@@ -92,12 +93,12 @@ hr
   margin-bottom: -1%
 
 p
-  font-size: 15.5px
+  font-size: 18px
   color: $bodycolor
   font-family: $serif
   word-wrap: break-word
-  font-weight: 400
-  line-height: 170%
+  font-weight: normal
+  line-height: 160%
 
   /*FOR TYPOGRAPHIC SUPPORT
   text-rendering: optimizeLegibility
