--- a/css/homev2.sass
+++ b/css/homev2.sass
@@ -23,7 +23,7 @@ body
 
 .container
   margin: auto
-  width: 600px!important
+  width: 500px!important
 
   // vertically align element
   top: 55%
@@ -32,7 +32,7 @@ body
   transform: translate(-50%, -50%)
 
   h1
-    font-size: 25px
+    font-size: 30px
     color: white
     font-weight: 900
     font-family: $sans
@@ -42,8 +42,8 @@ body
 
   hr
     border-top: 0
-    border-bottom: 1px solid #eee
-    width: 30%
+    border-bottom: 5px solid #eee
+    width: 60px
     margin-top: 40px
 
 div.blog-index
@@ -51,6 +51,8 @@ div.blog-index
   border: 1px solid #eee
   border-radius: 3px
   overflow: hidden!important
+
+  transform: translateX(2px)
 
   -webkit-transition: ease-in-out 0.3s
   transition: ease-in-out 0.3s
@@ -64,7 +66,7 @@ div.blog-index
     background-color: #eee
     font-family: $sans
     text-transform: uppercase
-    font-size: 10px
+    font-size: 10.5px
     letter-spacing: 1.5px
     font-weight: 700
     color: black
@@ -74,8 +76,8 @@ div.blog-index
     margin: auto
     margin-top: -0.5px
     width: 100%
-    height: 30px
-    line-height: 30px
+    height: 35px
+    line-height: 35px
 
   .index-content
     padding: 2px 25px 7px 25px
@@ -83,7 +85,7 @@ div.blog-index
 
     h4
       font-size: 18px
-      font-weight: 900
+      font-weight: 700
       color: white
       font-family: $sans
 
@@ -91,18 +93,19 @@ div.blog-index
         color: white
 
     div.entry-content
-      font-size: 14px
+      font-size: 13px
       color: white
       font-family: $serif
       word-wrap: break-word
       font-weight: normal
-      line-height: 160%
+      line-height: 150%
 
       p.continueread
         font-family: $sans
         text-transform: uppercase
-        font-size: 9px
-        font-weight: 900
+        font-size: 9.5px
+        font-weight: 700
+        letter-spacing: 0.5px
 
 a
   text-decoration: none
