Updated to homev3

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,7 +5,7 @@
 <script src="https://use.typekit.net/ouv5tyu.js"></script>
 <script>try{Typekit.load({ async: true });}catch(e){}</script>
 
-<script src="//use.edgefonts.net/neuton:n4,i4.js"></script>
+<link href="https://fonts.googleapis.com/css?family=Neuton" rel="stylesheet">
 
 <meta name="description" content="{% if page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}">
 
