--- a/css/_brand.sass
+++ b/css/_brand.sass
@@ -1,7 +1,7 @@
 // fonts
 
 $sans: "europa", -apple-system, BlinkMacSystemFont, sans-serif
-$serif: neuton, Georgia, serif
+$serif: "neuton", Georgia, serif
 
 
 // colors
