Updated to homev4; changed some arrows to fontawesome

--- a/css/homev4.sass
+++ b/css/homev4.sass
@@ -52,6 +52,8 @@ div.blog-index
   border-radius: 3px
   overflow: hidden!important
 
+  text-align: center
+
   transform: translateX(2px)
 
   -webkit-transition: ease-in-out 0.3s
@@ -93,12 +95,12 @@ div.blog-index
         color: white
 
     div.entry-content
-      font-size: 14px
-      color: white
+      font-size: 15.5px
+      color: #bbb
       font-family: $serif
       word-wrap: break-word
       font-weight: normal
-      line-height: 150%
+      line-height: 140%
 
       p.continueread
         font-family: $sans
