--- a/_includes/latest.html
+++ b/_includes/latest.html
@@ -6,6 +6,6 @@
 <div class="entry-content">
     <p>{{ post.content | strip_html | xml_escape | truncatewords: 37 }}</p>
 
-    <p class="continueread"><a href="{{ post.url }}">Continue Reading &rsaquo;</a></p>
+    <p class="continueread"><a href="{{ post.url }}">Continue Reading <i class="fa fa-angle-right" aria-hidden="true"></i></a></p>
 
 </div>
