Updated sans font to use Apple System as primary, Europa as secondary

--- a/css/_brand.sass
+++ b/css/_brand.sass
@@ -1,6 +1,6 @@
 // fonts
 
-$sans: "europa", -apple-system, BlinkMacSystemFont, sans-serif
+$sans:  -apple-system, "europa", BlinkMacSystemFont, sans-serif
 $serif: "neuton", Georgia, serif
 
 
