Sans font in this order: -apple-system, BlinkMacSystemFont, Europa

--- a/css/_brand.sass
+++ b/css/_brand.sass
@@ -1,6 +1,6 @@
 // fonts
 
-$sans:  -apple-system, "europa", BlinkMacSystemFont, sans-serif
+$sans: -apple-system, BlinkMacSystemFont, "europa", sans-serif
 $serif: "neuton", Georgia, serif
 
 
