--- a/css/_brand.sass
+++ b/css/_brand.sass
@@ -1,6 +1,6 @@
 // fonts
 
-$sans: -apple-system, BlinkMacSystemFont, "europa", sans-serif
+$sans: "europa", -apple-system, BlinkMacSystemFont, sans-serif
 $serif: "neuton", Georgia, serif
 
 
