--- a/css/navbar-v2.sass
+++ b/css/navbar-v2.sass
@@ -6,17 +6,17 @@
 
 nav
   border-bottom: .5px solid #dadada
-  background-color: rgba(255,255,255,0.85)
+  background-color: white
   position: fixed
   width: 100%
   top: 0
   height: 60px
   z-index: 100
 
-  $filter: blur(20px) saturate(250%)
-  backdrop-filter: $filter
-  -webkit-backdrop-filter: $filter
-  transition: $filter
+  // $filter: blur(20px) saturate(250%)
+  // backdrop-filter: $filter
+  // -webkit-backdrop-filter: $filter
+  // transition: $filter
 
   #navbar-logo
     float: left
