--- a/css/homev4.sass
+++ b/css/homev4.sass
@@ -48,8 +48,7 @@ body
 
 div.blog-index
   margin-top: 50px
-  border: 1px solid #eee
-  border-radius: 3px
+  border-radius: 4px
   overflow: hidden!important
 
   text-align: center
@@ -59,44 +58,42 @@ div.blog-index
   -webkit-transition: ease-in-out 0.3s
   transition: ease-in-out 0.3s
 
-  background-color: rgba(255,255,255,0.2)
+  background-color: rgba(255,255,255,0.9)
   $filter: blur(10px) saturate(250%)
   backdrop-filter: $filter
   -webkit-backdrop-filter: $filter
 
   .latest
-    background-color: #eee
+    background-color: #ccc
     font-family: $sans
     text-transform: uppercase
     font-size: 10.5px
     letter-spacing: 1.5px
     font-weight: 700
-    color: black
+    color: #333
 
     text-align: center
     top: 0
     margin: auto
-    margin-top: -0.5px
     width: 100%
-    height: 35px
-    line-height: 35px
+    height: 40px
+    line-height: 40px
 
   .index-content
-    padding: 2px 25px 7px 25px
+    padding: 5px 30px 10px 30px
 
 
     h4
       font-size: 18px
       font-weight: 700
-      color: white
       font-family: $sans
 
       a
-        color: white
+        color: $midgrey
 
     div.entry-content
       font-size: 15.5px
-      color: #bbb
+      color: $lightgrey
       font-family: $serif
       word-wrap: break-word
       font-weight: normal
