--- a/css/homev4.sass
+++ b/css/homev4.sass
@@ -58,26 +58,26 @@ div.blog-index
   -webkit-transition: ease-in-out 0.3s
   transition: ease-in-out 0.3s
 
-  background-color: rgba(255,255,255,0.9)
+  background-color: rgba(255,255,255,0.6)
   $filter: blur(10px) saturate(250%)
   backdrop-filter: $filter
   -webkit-backdrop-filter: $filter
 
   .latest
-    background-color: #ccc
+    background-color: white
     font-family: $sans
     text-transform: uppercase
     font-size: 10.5px
     letter-spacing: 1.5px
     font-weight: 700
-    color: #333
+    color: $lightgrey
 
     text-align: center
     top: 0
     margin: auto
     width: 100%
-    height: 40px
-    line-height: 40px
+    height: 37px
+    line-height: 37px
 
   .index-content
     padding: 5px 30px 10px 30px
@@ -93,7 +93,7 @@ div.blog-index
 
     div.entry-content
       font-size: 15.5px
-      color: $lightgrey
+      color: $midgrey
       font-family: $serif
       word-wrap: break-word
       font-weight: normal
