--- a/css/navbar-v2.sass
+++ b/css/navbar-v2.sass
@@ -7,7 +7,7 @@
 nav
   border-bottom: .5px solid #dadada
   background-color: white
-  position: fixed
+  position: absolute
   width: 100%
   top: 0
   height: 60px
