--- a/css/homev4.sass
+++ b/css/homev4.sass
@@ -39,6 +39,7 @@ body
     display: block
     text-align: center
     line-height: 150%
+    text-shadow: 0 0 20px black
 
   hr
     border-top: 0
