Fixed center float for blog page

--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -10,12 +10,18 @@
 <body>
 {% include navbar.html %}
 
-{% include sidebar.html %}
 
+<div class="blog-body">
+
+
+{% include sidebar.html %}
 <div class="container">
 {{ content }}
 </div>
 
-</body>
 
+</div>
+
+
+</body>
 </html>
