--- a/css/blog.sass
+++ b/css/blog.sass
@@ -18,10 +18,14 @@ body
 
   overflow-x: hidden
 
+.blog-body
+  width: 1000px
+  margin: 0 auto
+
 .container
   width: 550px
   margin: 0 auto
-  margin-left: 15%
+  margin-left: 0
   min-height: 100%
   margin-bottom: -50px
   overflow: visible
