Added blog post One Week in Singapore

--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -4,6 +4,7 @@
 {% include head.html %}
 <link rel="stylesheet" type="text/css" href="/css/blog.css">
 {% include analytics.html %}
+{% seo %}
 <title>{{ page.title }}</title>
 </head>
 
