--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,6 +5,7 @@
 {% include head.html %}
 <link rel="stylesheet" type="text/css" href="/css/homev4.css">
 {% include analytics.html %}
+{% seo %}
 </head>
 
 <body>
