--- a/css/_brand.sass
+++ b/css/_brand.sass
@@ -1,7 +1,7 @@
 // fonts
 
-$sans: "europa", -apple-system, BlinkMacSystemFont, sans-serif
-$serif: "neuton", Georgia, serif
+$sans: -apple-system, BlinkMacSystemFont, "Open Sans", sans-serif
+$serif: Georgia, serif
 
 
 // colors
