--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,10 +2,7 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<script src="https://use.typekit.net/ouv5tyu.js"></script>
-<script>try{Typekit.load({ async: true });}catch(e){}</script>
-
-<link href="https://fonts.googleapis.com/css?family=Neuton" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i" rel="stylesheet">
 
 <meta name="description" content="{% if page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}">
 
