--- a/css/blog.sass
+++ b/css/blog.sass
@@ -73,10 +73,9 @@ h3
   font-size: 15px
   color: $detailcolor
   font-style: italic
-  font-weight: 300
+  font-weight: 400
   font-family: $sans
   line-height: 150%
-  margin-bottom: 50px
 
 .date
   font-size: 10.5px
@@ -95,14 +94,15 @@ hr
   width: 30%
   margin-left: 0
   margin-bottom: -1%
+  margin-top: 50px
 
 p
-  font-size: 18px
+  font-size: 16px
   color: $bodycolor
   font-family: $serif
   word-wrap: break-word
   font-weight: normal
-  line-height: 160%
+  line-height: 180%
 
   /*FOR TYPOGRAPHIC SUPPORT
   text-rendering: optimizeLegibility
@@ -111,6 +111,16 @@ p
   -webkit-font-feature-settings: "kern"
   font-feature-settings: "kern"
   font-kerning: normal
+
+/*FOR SUBHEADERS
+h4
+  font-size: 17px
+  color: $bodycolor
+  font-family: $sans
+  word-wrap: break-word
+  font-weight: 800
+  line-height: 160%
+  margin-top: 50px
 
 .pagination
   text-align: center
@@ -136,24 +146,39 @@ p
 .post-img-container
   float: right
   display: block
-  padding: 0 0 10px 25px
-  $imgheight: 250px
-  height: $imgheight
+  padding: 7px 0 10px 30px
+  $imgwidth: 400px
+  width: $imgwidth
+  height: relative
   text-align: left
-  margin-right: -50px
-  width: relative
-  text-align: left
+  margin-right: -150px
   overflow: auto
   position: static
 
   img
-    height: $imgheight
-    border-radius: 3px
+    width: $imgwidth
+    border-radius: 4px 4px 0 0
     background-color: $fadegrey
     float: left
     display: inline
     left: 0
     position: relative
+    margin-bottom: 15px
+
+  .img-caption
+    text-align: left
+    font-size: 13px
+    color: $bodycolor
+    font-family: $sans
+    word-wrap: break-word
+    font-weight: 300
+    line-height: 140%
+    display: block
+    float: none
+    padding: 15px
+
+    background-color: #f5f5f5
+    border-radius: 0 0 4px 4px
 
 img
   max-width: 100%
