--- a/css/homev4.sass
+++ b/css/homev4.sass
@@ -34,7 +34,7 @@ body
   h1
     font-size: 30px
     color: white
-    font-weight: 900
+    font-weight: 700
     font-family: $sans
     display: block
     text-align: center
@@ -93,29 +93,29 @@ div.blog-index
         color: $midgrey
 
     div.entry-content
-      font-size: 15.5px
+      font-size: 15px
       color: $midgrey
       font-family: $serif
       word-wrap: break-word
       font-weight: normal
-      line-height: 140%
+      line-height: 160%
 
       p.continueread
         font-family: $sans
         text-transform: uppercase
         font-size: 9.5px
-        font-weight: 700
+        font-weight: 600
         letter-spacing: 0.5px
 
 a
   text-decoration: none
-  color: $link
+  color: white
   -webkit-transition: ease-in-out 0.3s
   transition: ease-in-out 0.3s
 
   &:hover
     text-decoration: none
-    color: $linkhover
+    color: $link
 
 img
   max-width: 100%
