--- a/_includes/head.html
+++ b/_includes/head.html
@@ -51,7 +51,7 @@
 {% else %}
   <meta name="twitter:description" content="{{ page.content | strip_html | xml_escape | truncate: 200 }}">
 {% endif %}
-  <meta name="twitter:image:src" content="{{ site.url }}/assets/header.png">
+  <meta name="twitter:image:src" content="{{ site.url }}/assets/header-01.png">
 
 
 {% if page.title %}
@@ -67,4 +67,4 @@
 {% else %}
   <meta name="og:description" content="{{ page.content | strip_html | xml_escape | truncate: 200 }}">
 {% endif %}
-<meta property="og:image" content="{{ site.url }}/assets/header.png">
+<meta property="og:image" content="{{ site.url }}/assets/header-01.png">
