--- a/css/homev4.sass
+++ b/css/homev4.sass
@@ -90,11 +90,11 @@ div.blog-index
       font-family: $sans
 
       a
-        color: $midgrey
+        color: white
 
     div.entry-content
       font-size: 15px
-      color: $midgrey
+      color: white
       font-family: $serif
       word-wrap: break-word
       font-weight: normal
