--- a/css/home.sass
+++ b/css/home.sass
@@ -59,7 +59,7 @@ div.blog-index
   -webkit-transition: ease-in-out 0.3s
   transition: ease-in-out 0.3s
 
-  background-color: rgba(255,255,255,0.6)
+  background-color: rgba(255,255,255,0.7)
   $filter: blur(10px) saturate(250%)
   backdrop-filter: $filter
   -webkit-backdrop-filter: $filter
@@ -90,11 +90,11 @@ div.blog-index
       font-family: $sans
 
       a
-        color: white
+        color: $midgrey
 
     div.entry-content
       font-size: 15px
-      color: white
+      color: $midgrey
       font-family: $serif
       word-wrap: break-word
       font-weight: normal
@@ -109,13 +109,13 @@ div.blog-index
 
 a
   text-decoration: none
-  color: white
+  color: $link
   -webkit-transition: ease-in-out 0.3s
   transition: ease-in-out 0.3s
 
   &:hover
     text-decoration: none
-    color: $link
+    color: $linkhover
 
 img
   max-width: 100%
