--- a/css/error.sass
+++ b/css/error.sass
@@ -55,6 +55,7 @@ a
     vertical-align: middle
     display: inline-block
     margin-top: -20px
+    line-height: 160%
 
 p, ul.license-list li.license-list
   font-size: 14.25px
