--- a/css/error.sass
+++ b/css/error.sass
@@ -27,6 +27,9 @@ body
   position: absolute
   transform: translate(-50%, -50%)
 
+  @media screen and (max-width: $phone)
+    width: 85%!important
+
 a
   text-decoration: none
   color: $link
