--- a/css/home.sass
+++ b/css/home.sass
@@ -31,6 +31,13 @@ body
   position: absolute
   transform: translate(-50%, -50%)
 
+  @media screen and (max-width: $phone)
+    width: 85%!important
+    top: 0!important
+    left: 0
+    position: relative
+    transform: translate(0%, 175px)
+
   h1
     font-size: 30px
     color: white
