--- a/css/sidebar.sass
+++ b/css/sidebar.sass
@@ -12,6 +12,9 @@
   padding-bottom: 50px
   z-index: 0
 
+  @media screen and (max-width: $tablet)
+    display: none
+
   .card1
     border: 0.5px solid #ddd
     border-radius: 3px
