Fixed bottom of homepage

--- a/css/page.sass
+++ b/css/page.sass
@@ -23,7 +23,7 @@ body
   padding-bottom: 5px
 
   @media screen and (max-width: $phone)
-    width: 95%
+    width: 100%
 
 .post-container
   margin: 200px 30px 20px 30px
@@ -95,7 +95,7 @@ p, ul.license-list li.license-list
 
 div.profile-content
   border-top: 1px solid #ddd
-  margin-top: 200px
+  margin-top: 200px!important
   padding-top: 20px
   padding-bottom: 20px
   font-family: $sans
@@ -104,6 +104,7 @@ div.profile-content
   text-align: center
   color: $fadegrey
   line-height: 10px
+  margin: auto
 
   a
     color: $fadegrey
