Added icons to nav bar to compress upon phone media width

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -35,9 +35,9 @@
 
 <div class="nav-links">
 <ul class="nav">
-<li class="nav"><a class="nav" href="/blog">Blog</a></li>
-<li class="nav"><a class="nav" href="/about">About</a></li>
-<li class="nav"><a class="nav" href="mailto:mail@francisborja.com">Contact</a></li>
+<li class="nav"><a class="nav" href="/blog"><img src="/assets/nav/quill.svg" /> <span class="phone-hide">Blog</span></a></li>
+<li class="nav"><a class="nav" href="/about"><img src="/assets/nav/avatar.svg" /> <span class="phone-hide">About</span></a></li>
+<li class="nav"><a class="nav" href="mailto:mail@francisborja.com"><img src="/assets/nav/send.svg" /> <span class="phone-hide">Contact</span></a></li>
 </ul>
 </div>
 </nav>
