--- a/css/navbar-v2.sass
+++ b/css/navbar-v2.sass
@@ -18,9 +18,6 @@ nav
   // -webkit-backdrop-filter: $filter
   // transition: $filter
 
-  @media screen and (max-width: $phone)
-    height: 150px
-
   #navbar-logo
     float: left
     position: absolute
@@ -36,7 +33,7 @@ nav
       fill: $basecolor
 
     @media screen and (max-width: $phone)
-      margin-left: 10%
+      margin-left: 5%
 
   .nav-links
     right: 0
@@ -49,31 +46,44 @@ nav
     transform: translateY(-50%)
 
     @media screen and (max-width: $phone)
-      padding-right: 10%
+      padding-right: 5%
 
     ul
       font-family: $sans
       list-style: none
-      font-weight: 700
-      font-size: 16px
-
-      @media screen and (max-width: $phone)
-        text-align: right
-        line-height: 200%
+      font-weight: 500
+      font-size: 13px
+      text-transform: uppercase
+      letter-spacing: 1px
 
       li
         display: inline
         list-style-type: none
 
         @media screen and (max-width: $phone)
-          display: block
+          span.phone-hide
+            display: none
 
         a
-          margin-left: 30px
+          margin-left: 50px
           vertical-align: middle
           color: $lightgrey
           -webkit-transition: ease-in-out 0.3s
           transition: ease-in-out 0.3s
+
+          @media screen and (max-width: $phone)
+            margin-left: 15px
+
+          img
+            opacity: 0.8
+            height: 13px
+            width: auto
+            transform: translate(-8px, 2px)
+
+            @media screen and (max-width: $phone)
+              opacity: 1
+              height: 18px
+              transform: translate(-8px, 5px)
 
           &:hover
             color: $link
