--- a/css/navbar-v2.sass
+++ b/css/navbar-v2.sass
@@ -60,7 +60,7 @@ nav
         display: inline
         list-style-type: none
 
-        @media screen and (max-width: $phone)
+        @media screen and (max-width: 620px)
           span.phone-hide
             display: none
 
@@ -71,14 +71,22 @@ nav
           -webkit-transition: ease-in-out 0.3s
           transition: ease-in-out 0.3s
 
-          @media screen and (max-width: $phone)
+          @media screen and (max-width: 600px)
+            margin-left: 30px
+
+          @media screen and (max-width: 350px)
             margin-left: 15px
+
+          @media screen and (max-width: 300px)
+            margin-left: 10px
 
           img
             opacity: 0.8
             height: 13px
             width: auto
             transform: translate(-8px, 2px)
+            -webkit-transition: ease-in-out 0.3s
+            transition: ease-in-out 0.3s
 
             @media screen and (max-width: $phone)
               opacity: 1
@@ -86,4 +94,8 @@ nav
               transform: translate(-8px, 5px)
 
           &:hover
-            color: $link
+            color: darken($lightgrey, 30)
+
+            img
+              opacity: 1
+              transform: scale(1.05) translate(-7.5px, 2px)
