Added CV link at /cv

--- a/css/home.sass
+++ b/css/home.sass
@@ -54,6 +54,17 @@ body
     width: 60px
     margin-top: 40px
 
+
+  p
+    font-size: 15px
+    font-weight: 500
+    color: #555
+    font-family: -apple-system, BlinkMacSystemFont, 'Open Sans', sans-serif
+    display: block
+    color: #666
+    text-align: center
+    line-height: 160%
+
 div.blog-index
   margin-top: 50px
   border-radius: 4px
