--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,6 +4,8 @@
 
 <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i" rel="stylesheet">
 
+<meta name="theme-color" content="#2082ac" />
+
 <meta name="description" content="{% if page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}">
 
 
