--- a/css/home.sass
+++ b/css/home.sass
@@ -12,8 +12,8 @@ body
   background-attachment: fixed
   background-color: white
 
-  height: 100%
-  max-height: 100%
+  height: 100% !importat
+  max-height: 100% !important
   top: 0
 
   size: 100% !important
