--- a/css/home.sass
+++ b/css/home.sass
@@ -12,7 +12,7 @@ body
   background-attachment: fixed
   background-color: white
 
-  height: 100% !importat
+  height: 100% !important
   max-height: 100% !important
   top: 0
 
