--- a/css/page.sass
+++ b/css/page.sass
@@ -89,7 +89,7 @@ p, ul.license-list li.license-list
     margin: 0
 
   img
-    height: 40% !important
+    height: 150px !important
     border-radius: 5px
     background-color: $fadegrey
 
