--- a/css/page.sass
+++ b/css/page.sass
@@ -87,9 +87,11 @@ p, ul.license-list li.license-list
 
   @media screen and (max-width: $phone)
     margin: 0
+    $phoneimageheight: 150px
+    height: $phoneimageheight
 
   img
-    height: 150px !important
+    height: $phoneimageheight
     border-radius: 5px
     background-color: $fadegrey
 
