--- a/css/page.sass
+++ b/css/page.sass
@@ -87,11 +87,9 @@ p, ul.license-list li.license-list
 
   @media screen and (max-width: $phone)
     margin: 0
-    $phoneimageheight: 150px
-    height: $phoneimageheight
+    height: 150px
 
   img
-    height: $phoneimageheight
     border-radius: 5px
     background-color: $fadegrey
 
