--- a/css/page.sass
+++ b/css/page.sass
@@ -87,11 +87,16 @@ p, ul.license-list li.license-list
 
   @media screen and (max-width: $phone)
     margin: 0
-    height: 150px
+    $phoneimageheight: 150px
+    height: $phoneimageheight
 
   img
+    height: $imgheight
     border-radius: 5px
     background-color: $fadegrey
+
+    @media screen and (max-width: $phone)
+      height: $phoneimageheight
 
 div.profile-content
   border-top: 1px solid #ddd
