--- a/css/page.sass
+++ b/css/page.sass
@@ -90,13 +90,14 @@ p, ul.license-list li.license-list
     $phoneimageheight: 150px
     height: $phoneimageheight
 
+      img
+        @media screen and (max-width: $phone)
+          height: $phoneimageheight
+
   img
     height: $imgheight
     border-radius: 5px
     background-color: $fadegrey
-
-    @media screen and (max-width: $phone)
-      height: $phoneimageheight
 
 div.profile-content
   border-top: 1px solid #ddd
