--- a/css/page.sass
+++ b/css/page.sass
@@ -86,16 +86,12 @@ p, ul.license-list li.license-list
   text-align: right
 
   @media screen and (max-width: $phone)
-    margin: 0
-    height: 150px
+    display: none
 
   img
     height: $imgheight
     border-radius: 5px
     background-color: $fadegrey
-
-    @media screen and (max-width: $phone)
-      height: 150px
 
 div.profile-content
   border-top: 1px solid #ddd
