--- a/css/home.sass
+++ b/css/home.sass
@@ -5,7 +5,7 @@
 @import brand
 
 body
-  background-image: url(/assets/city.jpg)
+  background-image: url(/assets/bg.jpg)
   background-repeat: no-repeat
   background-position: center bottom
   background-size: cover
@@ -47,7 +47,7 @@ body
     display: block
     text-align: center
     line-height: 150%
-    text-shadow: 0 0 20px black
+    text-shadow: 0 0 30px #333
 
   hr
     border-top: 0
