Updated font size for tablets/phones

--- a/css/blog.sass
+++ b/css/blog.sass
@@ -125,6 +125,12 @@ p
   font-feature-settings: "kern"
   font-kerning: normal
 
+  @media screen and (max-width: $tablet)
+    font-size: 95%
+
+  @media screen and (max-width: $phone)
+    font-size: 90%
+
 /*FOR SUBHEADERS
 h4
   font-size: 17px
