--- a/css/navbar-v2.sass
+++ b/css/navbar-v2.sass
@@ -65,6 +65,7 @@ nav
             display: none
 
         a
+          text-decoration: none
           margin-left: 50px
           vertical-align: middle
           color: $lightgrey
