--- a/css/navbar-v2.sass
+++ b/css/navbar-v2.sass
@@ -45,7 +45,7 @@ nav
     position: absolute
     transform: translateY(-50%)
 
-    @media screen and (max-width: $phone)
+    @media screen and (max-width: $tablet)
       padding-right: 5%
 
     ul
@@ -60,7 +60,7 @@ nav
         display: inline
         list-style-type: none
 
-        @media screen and (max-width: 620px)
+        @media screen and (max-width: 740px)
           span.phone-hide
             display: none
 
@@ -82,14 +82,14 @@ nav
             margin-left: 10px
 
           img
-            opacity: 0.8
+            opacity: 0.6
             height: 13px
             width: auto
             transform: translate(-8px, 2px)
             -webkit-transition: ease-in-out 0.3s
             transition: ease-in-out 0.3s
 
-            @media screen and (max-width: $phone)
+            @media screen and (max-width: 740px)
               opacity: 1
               height: 18px
               transform: translate(-8px, 5px)
