--- a/css/work.sass
+++ b/css/work.sass
@@ -5,7 +5,7 @@
 @import brand
 
 body
-  background-image: url(/assets/work-bg.jpg)
+  background-image: url(/assets/work-bg-temp.jpg)
   background-repeat: no-repeat
   background-position: center top
   background-size: cover
@@ -47,6 +47,7 @@ body
     display: block
     text-align: left
     line-height: 150%
+    z-index: 10
 
   h2
     font-size: 25px
@@ -57,6 +58,7 @@ body
     text-align: left
     margin-top: -8px
     line-height: 100%
+    z-index: 10
 
   hr
     border-top: 0
@@ -148,7 +150,7 @@ a
     color: $linkhover
 
 div.home-gap
-  font-size: 20px
+  font-size: 50px
   opacity: 0
 
 img
