--- a/css/work.sass
+++ b/css/work.sass
@@ -41,7 +41,7 @@ body
 
   h1
     font-size: 30px
-    color: #999
+    color: white
     font-weight: 700
     font-family: $sans
     display: block
@@ -51,7 +51,7 @@ body
 
   h2
     font-size: 25px
-    color: #999
+    color: white
     font-weight: 300
     font-family: $sans
     display: block
