--- a/_layouts/license.html
+++ b/_layouts/license.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 {% include head.html %}
-<link rel="stylesheet" type="text/css" href="/css/page.css">
+<link rel="stylesheet" type="text/css" href="/css/license.css">
 {% include analytics.html %}
 {% seo %}
 <title>{{ page.title }}</title>
