--- a/css/about.sass
+++ b/css/about.sass
@@ -28,9 +28,9 @@ body
 .header
   background-image: url(/assets/about.jpg)
   background-repeat: no-repeat
-  background-position: center bottom
+  background-position: center
   background-size: cover
-  background-attachment: relative
+  background-attachment: fixed
   background-color: white
 
   height: 350px
@@ -62,6 +62,8 @@ body
 
 .post-container
   margin: 100px 30px 20px 30px
+  @media screen and (max-width: $phone)
+    margin: 50px 30px 20px 30px
 
 a
   text-decoration: none
