Updated Work page

--- a/css/work.sass
+++ b/css/work.sass
@@ -79,6 +79,15 @@ body
 
     margin-top: 40px
 
+  a
+    padding: 10px 15px 10px 15px
+    background-color: white
+    border-radius: 50px
+    width: relative
+
+    &:hover
+      box-shadow: 0 0 15px #777
+
 div.blog-index
   margin-top: 50px
   border-radius: 4px
