Updated margins for all pages

--- a/css/blog.sass
+++ b/css/blog.sass
@@ -52,6 +52,9 @@ body
   margin: 200px 30px 200px 30px
   overflow: visible
 
+  @media screen and (max-width: $phone)
+    margin: 150px 10px 150px 10px
+
 a
   text-decoration: none
   color: $link
