--- a/css/license.sass
+++ b/css/license.sass
@@ -28,6 +28,9 @@ body
 .post-container
   margin: 200px 30px 20px 30px
 
+  @media screen and (max-width: $phone)
+    margin: 50px 10px 20px 10px
+
 a
   text-decoration: none
   color: $link
