--- a/css/blog.sass
+++ b/css/blog.sass
@@ -168,7 +168,7 @@ h4
 .post-img-container
   float: right
   display: block
-  padding: 7px 0 10px 30px
+  padding: 7px 0 10px 10px
   $imgwidth: 400px
   width: $imgwidth
   height: relative
@@ -178,11 +178,12 @@ h4
   position: static
 
   @media screen and (max-width: $tablet)
-    float: none
+    float: left
     padding: 7px 0 10px 0
     width: 100%
     margin-right: 0
     left: 0
+    transform: translateX(-40px)
 
   img
     width: $imgwidth
