--- a/css/blog.sass
+++ b/css/blog.sass
@@ -37,7 +37,7 @@ body
   overflow: visible
 
   @media screen and (max-width: $tablet)
-    width: 75
+    width: 700px
     margin: auto
 
   @media screen and (max-width: $phone)
@@ -49,7 +49,7 @@ body
     height: 50px
 
 .post-container
-  margin: 200px 30px 200px 30px
+  margin: 200px 20px 200px 20px
   overflow: visible
 
 a
@@ -124,6 +124,9 @@ p
   -webkit-font-feature-settings: "kern"
   font-feature-settings: "kern"
   font-kerning: normal
+
+  @media screen and (max-width: $phone)
+    font-size: 12px
 
 /*FOR SUBHEADERS
 h4
