--- a/css/blog.sass
+++ b/css/blog.sass
@@ -90,6 +90,9 @@ h3
   font-family: $sans
   line-height: 150%
 
+  @media screen and (max-width: $phone)
+    font-size: 12px
+
 .date
   font-size: 10.5px
   text-transform: uppercase
@@ -126,7 +129,7 @@ p
   font-kerning: normal
 
   @media screen and (max-width: $phone)
-    font-size: 12px
+    font-size: 14px
 
 /*FOR SUBHEADERS
 h4
