--- a/css/blog.sass
+++ b/css/blog.sass
@@ -103,6 +103,16 @@ h3
   letter-spacing: 0.5px
   font-weight: 400
 
+.continue
+  font-size: 10px
+  text-transform: uppercase
+  letter-spacing: 0.5
+  color: $detailcolor
+  font-family: $sans
+  margin-top: -10px
+  letter-spacing: 0.5px
+  font-weight: 600
+
 hr
   background-color: #e5e5e5
   height: 5px
