--- a/css/blog.sass
+++ b/css/blog.sass
@@ -52,6 +52,9 @@ body
   margin: 200px 20px 200px 20px
   overflow: visible
 
+  @media screen and (max-width: $phone)
+    margin: 50px 20px 200px 20px
+
 a
   text-decoration: none
   color: $link
