--- a/css/blog.sass
+++ b/css/blog.sass
@@ -86,10 +86,9 @@ h2
   font-family: $sans
 
 h3
-  font-size: 15px
-  color: $detailcolor
-  font-style: italic
-  font-weight: 400
+  font-size: 14px
+  color: #aaa
+  font-weight: 300
   font-family: $sans
   line-height: 150%
 
@@ -103,7 +102,7 @@ h3
   color: $detailcolor
   font-family: $sans
   margin-top: -10px
-  letter-spacing: 0.5px
+  letter-spacing: 0.2px
   font-weight: 400
 
 .continue
@@ -112,7 +111,7 @@ h3
   color: $detailcolor
   font-family: $sans
   margin-top: -10px
-  letter-spacing: 0.5px
+  letter-spacing: 0.2px
   font-weight: 600
 
 hr
