--- a/css/home.sass
+++ b/css/home.sass
@@ -141,7 +141,8 @@ div.blog-index
     width: relative
 
     &:hover
-      box-shadow: 0 0 15px #bbb
+      background-color: $link
+      color: white
 
 div.home-gap
   font-size: 20px
