--- a/css/work.sass
+++ b/css/work.sass
@@ -86,7 +86,8 @@ body
     width: relative
 
     &:hover
-      box-shadow: 0 0 15px #777
+      background-color: $link
+      color: white
 
 div.blog-index
   margin-top: 50px
