--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,22 +4,11 @@
 
 <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i" rel="stylesheet">
 
-<meta name="theme-color" content="black" />
-
 <meta name="description" content="{% if page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}">
 
 
 <link rel="stylesheet" href="https://use.fontawesome.com/29fed3c443.css">
 
-<!--
-<script type="text/javascript">
-  <!--
-  if (screen.width <= 1000) {
-    window.location = "/mobile";
-  }
-  //-->
-</script>
--->
 
 {% seo %}
 
@@ -35,7 +24,7 @@
 <meta name="msapplication-TileColor" content="#da532c">
 <meta name="msapplication-TileImage" content="/assets/favicons/mstile-144x144.png?v=M4ok69EyKJ">
 <meta name="msapplication-config" content="/assets/favicons/browserconfig.xml?v=M4ok69EyKJ">
-<meta name="theme-color" content="#ffffff">
+<meta name="theme-color" content="#000" />
 
 
 <meta name="twitter:card" content="summary_large_image">
