--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" type="text/css" href="/css/navbar-v2.css">
+<link rel="stylesheet" type="text/css" href="/css/navbar.css">
 </head>
 
 <nav>
