--- a/css/_brand.sass
+++ b/css/_brand.sass
@@ -5,7 +5,7 @@ $serif: Georgia, serif
 
 
 // colors
-$basecolor: #2082ac
+$basecolor: #0088AA
 $basehover: lighten($basecolor, 10)
 
 $link: $basecolor
