--- a/css/home.sass
+++ b/css/home.sass
@@ -40,14 +40,14 @@ body
     transform: translate(0%, 175px)
 
   h1
-    font-size: 30px
+    font-size: 40px
     color: white
     font-weight: 700
     font-family: $sans
     display: block
     text-align: center
     line-height: 150%
-    text-shadow: 0 0 30px #333
+    text-shadow: 0 0 20px black
 
   hr
     border-top: 0
@@ -79,7 +79,7 @@ div.blog-index
   transition: ease-in-out 0.3s
 
   background-color: rgba(255,255,255,0.7)
-  $filter: blur(10px) saturate(250%)
+  $filter: blur(30px) saturate(300%)
   backdrop-filter: $filter
   -webkit-backdrop-filter: $filter
 
@@ -114,7 +114,7 @@ div.blog-index
       p.excerpt
         font-size: 14px
         font-weight: 300
-        color: #666
+        color: $midgrey
         font-family: $sans
         word-wrap: break-word
         font-weight: normal
