--- a/css/sidebar.sass
+++ b/css/sidebar.sass
@@ -16,7 +16,7 @@
     display: none
 
   .card1
-    border: 0.5px solid #ddd
+    border: 0.5px solid #c9c9c9
     border-radius: 3px
     background-color: white
 
