--- a/css/license.sass
+++ b/css/license.sass
@@ -16,6 +16,12 @@ body
   height: 100%
   background-color: $pagecolor
 
+hr
+  border-bottom: 0.3px solid #ccc
+  border-top: 0px
+  border-left: 0px
+  border-right: 0px
+
 .container
   width: 500px
   margin: 0 auto
@@ -44,7 +50,7 @@ a
 .container
   h1
     font-size: 30px
-    font-weight: 700
+    font-weight: 900
     color: $titlecolor
     font-family: $sans
 
