--- a/css/home.sass
+++ b/css/home.sass
@@ -60,7 +60,7 @@ body
     font-size: 15px
     font-weight: 500
     color: #555
-    font-family: -apple-system, BlinkMacSystemFont, 'Open Sans', sans-serif
+    font-family: $sans
     display: block
     color: #666
     text-align: center
