--- a/css/about.sass
+++ b/css/about.sass
@@ -58,7 +58,7 @@ body
     @media screen and (max-width: $phone)
       width: 100%
       font-size: 30px
-      margin-top: 100px
+      font-weight: 700
 
 .post-container
   margin: 100px 30px 20px 30px
