--- a/css/about.sass
+++ b/css/about.sass
@@ -42,6 +42,9 @@ body
   padding: 0
   margin: 0
 
+  @media screen and (max-width: $phone)
+    background-image: url(/assets/about1.jpg)
+
   h1
     font-size: 50px
     font-weight: 500
