--- a/css/about.sass
+++ b/css/about.sass
@@ -43,7 +43,7 @@ body
   margin: 0
 
   @media screen and (max-width: $phone)
-    background-image: url(/assets/about1.jpg)
+    background-image: url(/assets/about-phone.jpg)
 
   h1
     font-size: 50px
