--- a/css/about.sass
+++ b/css/about.sass
@@ -44,6 +44,8 @@ body
 
   @media screen and (max-width: $phone)
     background-image: url(/assets/about-phone.jpg)
+    background-attachment: scroll
+    background-position: top
 
   h1
     font-size: 50px
