--- a/css/about.sass
+++ b/css/about.sass
@@ -63,7 +63,7 @@ body
     @media screen and (max-width: $phone)
       width: 100%
       font-size: 30px
-      font-weight: 700
+      top: 65%
 
 .post-container
   margin: 100px 30px 20px 30px
