Update to blog font sizes

--- a/css/_brand.sass
+++ b/css/_brand.sass
@@ -26,3 +26,13 @@ $pagecolor: white
 // media queries
 $tablet: 1100px
 $phone: 700px
+
+// viewport width
+$maxwidth: 1600px
+$minwidth: 700px
+
+// font sizes
+$maxfontpx: 18px
+$minfontpx: 14px
+$maxfont: 18
+$minfont: 14
