--- a/css/_brand.sass
+++ b/css/_brand.sass
@@ -6,7 +6,8 @@ $serif: Georgia, serif
 
 // colors
 $basecolor: #0088AA
-$basehover: lighten($basecolor, 10)
+$basehover: lighten($basecolor, 20)
+$basedark: darken($basecolor, 15)
 
 $link: $basecolor
 $linkhover: $basehover
