--- a/css/home.sass
+++ b/css/home.sass
@@ -49,6 +49,9 @@ body
     line-height: 150%
     text-shadow: 0 0 80px black
 
+    @media screen and (max-width: $phone)
+      font-size: 30px
+
   hr
     border-top: 0
     border-bottom: 5px solid #eee
