--- a/css/home.sass
+++ b/css/home.sass
@@ -41,13 +41,12 @@ body
 
   h1
     font-size: 40px
-    color: white
-    font-weight: 700
+    color: $midgrey
+    font-weight: 500
     font-family: $sans
     display: block
     text-align: center
     line-height: 150%
-    text-shadow: 0 0 80px black
 
     @media screen and (max-width: $phone)
       font-size: 30px
