--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -38,7 +38,7 @@
 <li class="nav"><a class="nav" href="/blog"><img src="/assets/nav/blog.svg" /><span class="phone-hide"> Blog</span></a></li>
 <li class="nav"><a class="nav" href="/work"><img src="/assets/nav/work.svg" /><span class="phone-hide"> Work</span></a></li>
 <li class="nav"><a class="nav" href="/about"><img src="/assets/nav/about.svg" /><span class="phone-hide"> About</span></a></li>
-<li class="nav"><a class="nav" href="mailto:mail@francisborja.com"><img src="/assets/nav/contact.svg" /><span class="phone-hide"> Contact</span></a></li>
+<li class="nav"><a class="nav" href="mailto:francisborja@outlook.com"><img src="/assets/nav/contact.svg" /><span class="phone-hide"> Contact</span></a></li>
 </ul>
 </div>
 </nav>
