Update to email address

--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -31,7 +31,7 @@
 
 <span style="margin: 3px; color: #aaa; font-style: bold">&#183;</span>
 
-<span style="margin: 3px"><a href="mailto:mail@francisborja.com">Contact</a></span>
+<span style="margin: 3px"><a href="mailto:francisborja@outlook.com">Contact</a></span>
 
 
 </div>
