Update to email address

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -67,7 +67,7 @@
 
     <th style="border-right: 25px solid transparent" valign="middle" width="relative"><a class="footer-link" href="/about">About</a>
 
-    <th style="border-right: 25px solid transparent" valign="middle" width="relative"><a class="footer-link" href="mailto:francisborja@outlook.com?Subject=Hello" target="_middle">Contact</a></th>
+    <th style="border-right: 25px solid transparent" valign="middle" width="relative"><a class="footer-link" href="mailto:freeingfrancis@outlook.com?Subject=Hello" target="_middle">Contact</a></th>
 
     <th valign="middle" width="relative"><a class="footer-link" id="footer-link" href="/license" style="margin-right: 0!important;">License</a></th>
 
