--- a/_layouts/license.html
+++ b/_layouts/license.html
@@ -29,7 +29,7 @@
 
 <span style="margin: 3px; color: #aaa; font-style: bold">&#183;</span>
 
-<span style="margin: 3px"><a href="mailto:francisborja@outlook.com">Contact</a></span>
+<span style="margin: 3px"><a href="mailto:freeingfrancis@outlook.com">Contact</a></span>
 
 
 </div>
