Cloudflare Web Analytics

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -4,6 +4,10 @@
 <link rel="stylesheet" type="text/css" href="/css/navbar.css">
 </head>
 
+
+<script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "e3f89d6d7128456796ff2d708cba46a1"}'></script>
+
+
 <nav>
 <div id="navbar-logo">
 <a id="nav" href="/"><svg height="25px" viewBox="0 0 5249 1000" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:1.41421;">
