Updated email address

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -26,7 +26,7 @@
 
 <div class="profile-content">
 
-  <a href="/about">About</a> <span style="color: #aaa;">&#183;</span> <a href="/license">License</a> <span style="color: #aaa;">&#183;</span> <a href="mailto:freeingfrancis@outlook.com">Contact</a>
+  <a href="/about">About</a> <span style="color: #aaa;">&#183;</span> <a href="/license">License</a> <span style="color: #aaa;">&#183;</span> <a href="mailto:hello@francisborja.com">Contact</a>
 
 </div>
 </div>
