--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,6 +2,9 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+<meta name="theme-color" content="#2082ac" media="(prefers-color-scheme: light)">
+<meta name="theme-color" content="#2082ac" media="(prefers-color-scheme: dark)">
+
 <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i" rel="stylesheet">
 
 <meta name="description" content="{% if page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}">
