Layout edits, new logo color, adjusted logo curves

--- a/css/_brand.sass
+++ b/css/_brand.sass
@@ -5,11 +5,11 @@ $serif: Georgia, serif
 
 
 // colors
-$basecolor: #0088AA
+$basecolor: #074C71
 $basehover: lighten($basecolor, 20)
 $basedark: darken($basecolor, 15)
 
-$link: $basecolor
+$link: lighten($basecolor, 10)
 $linkhover: $basehover
 
 $darkgrey: #333
