--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,19 +15,14 @@
 
 {% seo %}
 
-<link rel="apple-touch-icon" sizes="180x180" href="/assets/favicons/apple-touch-icon.png?v=M4ok69EyKJ">
-<link rel="icon" type="image/png" href="/assets/favicons/favicon-32x32.png?v=M4ok69EyKJ" sizes="32x32">
-<link rel="icon" type="image/png" href="/assets/favicons/android-chrome-192x192.png?v=M4ok69EyKJ" sizes="192x192">
-<link rel="icon" type="image/png" href="/assets/favicons/favicon-16x16.png?v=M4ok69EyKJ" sizes="16x16">
-<link rel="manifest" href="/assets/favicons/manifest.json?v=M4ok69EyKJ">
-<link rel="mask-icon" href="/assets/favicons/safari-pinned-tab.svg?v=M4ok69EyKJ" color="#2082ac">
-<link rel="shortcut icon" href="/assets/favicons/favicon.ico?v=M4ok69EyKJ">
-<meta name="apple-mobile-web-app-title" content="Francis Borja">
-<meta name="application-name" content="Francis Borja">
+
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="manifest" href="/site.webmanifest">
+<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#074C71">
 <meta name="msapplication-TileColor" content="#da532c">
-<meta name="msapplication-TileImage" content="/assets/favicons/mstile-144x144.png?v=M4ok69EyKJ">
-<meta name="msapplication-config" content="/assets/favicons/browserconfig.xml?v=M4ok69EyKJ">
-<meta name="theme-color" content="#000" />
+<meta name="theme-color" content="#ffffff">
 
 
 <meta name="twitter:card" content="summary_large_image">
