Updates: bottombar, larger navbar, socials

--- a/_includes/bottombar.html
+++ b/_includes/bottombar.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" type="text/css" href="/css/sidebar.css">
+<link rel="stylesheet" type="text/css" href="/css/bottombar.css">
 </head>
 
-<div class="sidebar">
+<div class="bottombar">
 
 <div class="card1">
 <img src="/assets/img/profile.jpg" oncontextmenu="return false" />
