--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -72,9 +72,17 @@
 <div class="nav-links">
 <ul class="nav">
 <li class="nav"><a class="nav" href="/blog"><img src="/assets/nav/blog.svg" /><span class="phone-hide"> Blog</span></a></li>
+
 <li class="nav"><a class="nav" href="/work"><img src="/assets/nav/work.svg" /><span class="phone-hide"> Work</span></a></li>
+
 <li class="nav"><a class="nav" href="/about"><img src="/assets/nav/about.svg" /><span class="phone-hide"> About</span></a></li>
+
 <li class="nav"><a class="nav" href="mailto:hello@francisborja.com"><img src="/assets/nav/contact.svg" /><span class="phone-hide"> Contact</span></a></li>
+
+<li class="nav social"><a class="nav" href="https://instagram.com/freeingfrancis"><img src="/assets/social/instagram.svg"></a></li>
+
+<li class="nav social"><a class="nav social" href="https://twitter.com/freeingfrancis"><img src="/assets/social/twitter.svg"></a></li>
+
 </ul>
 </div>
 </nav>
