--- a/css/navbar.sass
+++ b/css/navbar.sass
@@ -52,7 +52,7 @@ nav
       font-family: $sans
       list-style: none
       font-weight: 500
-      font-size: 11.5px
+      font-size: 14px
       text-transform: uppercase
       letter-spacing: 0.3px
 
@@ -64,9 +64,12 @@ nav
           span.phone-hide
             display: none
 
+        a.social
+          margin-left: 20px
+
         a
           text-decoration: none
-          margin-left: 50px
+          margin-left: 30px
           vertical-align: middle
           color: $lightgrey
           -webkit-transition: ease-in-out 0.3s
@@ -82,12 +85,14 @@ nav
             margin-left: 10px
 
           img
-            opacity: 0.6
-            height: 13px
+            opacity: 0.8
+            height: 15px
             width: auto
             transform: translate(-8px, 2px)
             -webkit-transition: ease-in-out 0.3s
             transition: ease-in-out 0.3s
+
+
 
             @media screen and (max-width: 740px)
               opacity: 1
