--- a/css/navbar.sass
+++ b/css/navbar.sass
@@ -75,14 +75,15 @@ nav
           -webkit-transition: ease-in-out 0.3s
           transition: ease-in-out 0.3s
 
+        a, a.social
           @media screen and (max-width: 600px)
-            margin-left: 20px
-
-          @media screen and (max-width: 350px)
             margin-left: 10px
 
+          @media screen and (max-width: 350px)
+            margin-left: 8px
+
           @media screen and (max-width: 300px)
-            margin-left: 5px
+            margin-left: 3px
 
           img
             opacity: 0.8
