Updates to bottombar

--- a/_includes/bottombar.html
+++ b/_includes/bottombar.html
@@ -4,13 +4,16 @@
 <link rel="stylesheet" type="text/css" href="/css/bottombar.css">
 </head>
 
+
 <div class="bottombar">
+
+<span class='line'></span>
 
 <div class="card1">
 <img src="/assets/img/profile.jpg" oncontextmenu="return false" />
 <div class="profile-content">
 
-  <p>Hello. My name is Francis. I&nbsp;am a writer and designer. Welcome to my blog. I hope you become friends with the voices in my head.</p>
+  <p>Hello. My name is Francis. I&nbsp;am a writer and designer. Welcome to my blog. I&nbsp;hope you become friends with the voices in&nbsp;my head.</p>
 
 </div>
 </div>
