--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -10,7 +10,7 @@
 <img src="/assets/img/profile.jpg" oncontextmenu="return false" />
 <div class="profile-content">
 
-  <p>Hello. My name is Francis. I&nbsp;am a writer and designer. Welcome to my blog. I hope you become friends with the voices in my head.</p>
+  <p>Hello. My name is Francis. I&nbsp;am a writer and designer. Welcome to my blog. I&nbsp;hope you become friends with the voices in&nbsp;my head.</p>
 
 </div>
 </div>
