--- a/css/bottombar.sass
+++ b/css/bottombar.sass
@@ -8,9 +8,16 @@
   display: block
   margin: auto
   padding-bottom: 50px
+  margin-top: -100px
 
   @media screen and (min-width: $tablet)
     display: none
+
+  .line
+    display: block
+    width: 100%
+    border-top: 1px solid #E8E8E8
+    margin-bottom: 80px
 
   .card1
     display: block
