New profile photos

--- a/css/bottombar.sass
+++ b/css/bottombar.sass
@@ -27,7 +27,7 @@
     border-radius: 10px
     background-color: white
 
-    width: 220px
+    width: 96%
     height: relative
     text-align: center
     overflow: hidden
