--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -7,7 +7,7 @@
 <div class="sidebar">
 
 <div class="card1">
-<img src="/assets/img/profile.jpg" oncontextmenu="return false" />
+<img src="/assets/img/profile_side.jpg" oncontextmenu="return false" />
 <div class="profile-content">
 
   <p>Hello. My name is Francis. I&nbsp;am a writer and designer. Welcome to my blog. I&nbsp;hope you become friends with the voices in&nbsp;my head.</p>
