Changes to bottombar and navigation margin spacing

--- a/css/bottombar.sass
+++ b/css/bottombar.sass
@@ -14,7 +14,7 @@
     display: none
 
   .line
-    display: block
+    display: none
     width: 100%
     border-top: 1px solid #E8E8E8
     margin-bottom: 80px
@@ -27,7 +27,7 @@
     border-radius: 10px
     background-color: white
 
-    width: 96%
+    width: 95%
     height: relative
     text-align: center
     overflow: hidden
