--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,6 +8,10 @@ layout: blog
 <br>
 <div>{{ content }}</div>
 
+
+<span class="moreposts"><a href="/blog">More posts <i class="fa-solid fa-arrow-right-long"></i></a></span>
+
+
 </div>
 
 
