--- a/css/_brand.sass
+++ b/css/_brand.sass
@@ -9,7 +9,7 @@ $basecolor: #074C71
 $basehover: lighten($basecolor, 20)
 $basedark: darken($basecolor, 15)
 
-$link: lighten($basecolor, 10)
+$link: $basedark
 $linkhover: $basehover
 
 $darkgrey: #333
@@ -18,7 +18,7 @@ $lightgrey: #777
 $fadegrey: #999
 
 $bodycolor: $midgrey
-$titlecolor: $midgrey
+$titlecolor: $basecolor
 $detailcolor: $fadegrey
 
 $pagecolor: white
