--- a/css/sidebar.sass
+++ b/css/sidebar.sass
@@ -35,7 +35,7 @@
 
       p
         font-size: 13px
-        color: $fadegrey
+        color: $lightgrey
         font-family: $sans
         font-weight: normal
         line-height: 155%
