--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,7 +10,7 @@
 <meta name="description" content="{% if page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}">
 
 
-<link rel="stylesheet" href="https://use.fontawesome.com/29fed3c443.css">
+<script src="https://kit.fontawesome.com/c1cd82336d.js" crossorigin="anonymous"></script>
 
 
 {% seo %}
