--- a/css/blog.sass
+++ b/css/blog.sass
@@ -53,7 +53,7 @@ body
   overflow: visible
 
   @media screen and (max-width: $phone)
-    margin: 100px 20px 200px 20px
+    margin: 150px 20px 200px 20px
 
 a
   text-decoration: none
@@ -66,7 +66,7 @@ a
     color: $linkhover
 
 h1
-  font-size: 23px
+  font-size: 24px
   font-weight: 700
   color: $titlecolor
   font-family: $sans
@@ -102,26 +102,54 @@ h3
   letter-spacing: 0.2px
   font-weight: 400
 
-.continue
+.continue,
+  display: inline-block
   font-size: 10px
   text-transform: uppercase
-  color: $detailcolor
   font-family: $sans
   letter-spacing: 0.2px
   font-weight: 600
 
   a
-    padding: 8px 13px 8px 13px
+    padding: 8px 12px 8px 12px
     background-color: #f0f0f0
     border-radius: 50px
     width: relative
+    color: $basecolor
+    text-decoration: none
 
     -webkit-transition: ease-in-out 0.3s
     transition: ease-in-out 0.3s
 
     &:hover
-      background-color: $link
+      background-color: $basecolor
       color: white
+
+.moreposts
+  display: block
+  text-align: center
+  font-size: 10px
+  text-transform: uppercase
+  color: white
+  font-family: $sans
+  letter-spacing: 0.2px
+  font-weight: 600
+  margin-top: 80px
+
+  a
+    padding: 8px 12px 8px 12px
+    background-color: $basecolor
+    border-radius: 50px
+    width: relative
+    color: white
+    text-decoration: none
+
+    -webkit-transition: ease-in-out 0.3s
+    transition: ease-in-out 0.3s
+
+    &:hover
+      background-color: #f0f0f0
+      color: $basecolor
 
 hr
   background-color: #e5e5e5
@@ -160,24 +188,26 @@ h4
 
 .pagination
   text-align: center
-  margin-top: -150px !important
-  margin-bottom: 150px !important
+  margin-top: -50px !important
+  margin-bottom: 250px !important
 
-  #arrow-next
-    fill: $fadegrey
+  .next
+    color: $fadegrey
+    padding-left: 100px
     -webkit-transition: ease-in-out 0.3s
     transition: ease-in-out 0.3s
 
-  #next:hover #arrow-next
-    fill: $link
+  .next:hover
+    color: $basecolor
 
-  #arrow-previous
-    fill: $fadegrey
+  .previous
+    color: $fadegrey
+    padding-right: 100px
     -webkit-transition: ease-in-out 0.3s
     transition: ease-in-out 0.3s
 
-  #previous:hover #arrow-previous
-    fill: $link
+  .previous:hover
+    color: $basecolor
 
 .post-img-container
   float: right
