--- a/css/bottombar.sass
+++ b/css/bottombar.sass
@@ -8,7 +8,7 @@
   display: block
   margin: auto
   padding-bottom: 50px
-  margin-top: -100px
+  margin-top: -120px
 
   @media screen and (min-width: $tablet)
     display: none
@@ -42,7 +42,7 @@
 
       p
         font-size: 13px
-        color: $fadegrey
+        color: $lightgrey
         font-family: $sans
         font-weight: normal
         line-height: 155%
@@ -70,6 +70,7 @@
 
       a
         color: #aaa
+        text-decoration: none
 
         &:hover
           color: $link
