--- a/css/_brand.sass
+++ b/css/_brand.sass
@@ -9,7 +9,7 @@ $basecolor: #074C71
 $basehover: lighten($basecolor, 20)
 $basedark: darken($basecolor, 15)
 
-$link: $basedark
+$link: $basecolor
 $linkhover: $basehover
 
 $darkgrey: #333
