--- a/css/home.sass
+++ b/css/home.sass
@@ -171,10 +171,9 @@ div.blog-index
         font-size: 9.5px
         font-weight: 600
         letter-spacing: 0.2px
-
         margin: 30px 0 5px 0
 
-  a
+  a, a.continueread
     text-decoration: none
     color: $link
     -webkit-transition: ease-in-out 0.3s
