--- a/css/blog.sass
+++ b/css/blog.sass
@@ -193,7 +193,7 @@ h4
 
   .next
     color: $fadegrey
-    padding-left: 100px
+    padding: 100px
     -webkit-transition: ease-in-out 0.3s
     transition: ease-in-out 0.3s
 
@@ -202,7 +202,7 @@ h4
 
   .previous
     color: $fadegrey
-    padding-right: 100px
+    padding: 100px
     -webkit-transition: ease-in-out 0.3s
     transition: ease-in-out 0.3s
 
