Latest Post update

--- a/_includes/latest.html
+++ b/_includes/latest.html
@@ -6,6 +6,6 @@
 <div class="entry-content">
     <p class="excerpt">{{ post.description | strip_html | xml_escape }}</p>
 
-    <p class="continueread"><a href="{{ post.url }}">Read <i class="fa-solid fa-arrow-right-long"></i></a></p>
+    <p class="continueread"><a href="{{ post.url }}">Read Latest Post <i class="fa-solid fa-arrow-right-long"></i></a></p>
 
 </div>
