--- a/css/home.sass
+++ b/css/home.sass
@@ -49,7 +49,7 @@ body
     line-height: 150%
 
     @media screen and (max-width: $phone)
-      font-size: 35px
+      font-size: 200%
 
   h2
     font-size: 20px
