--- a/css/home.sass
+++ b/css/home.sass
@@ -22,6 +22,10 @@ body
   margin: 0
   padding-bottom: 200px
 
+  @media screen and (max-width: $phone)
+    background-attachment: scroll
+    background-size: auto 100%
+
 .container
   margin: auto
   width: 500px!important
@@ -49,7 +53,7 @@ body
     line-height: 150%
 
     @media screen and (max-width: $phone)
-      font-size: 30px
+      font-size: 25px
 
   h2
     font-size: 20px
