--- a/css/home.sass
+++ b/css/home.sass
@@ -53,7 +53,7 @@ body
     line-height: 150%
 
     @media screen and (max-width: $phone)
-      font-size: 25px
+      font-size: 150%
 
   h2
     font-size: 20px
@@ -66,6 +66,7 @@ body
 
     @media screen and (max-width: 1500px)
       color: #444
+      font-size: 110%
 
   h3
     font-size: 12px
@@ -87,6 +88,8 @@ body
     margin-top: 40px
     margin-bottom: 40px
 
+    @media screen and (max-width: $phone)
+      border-bottom: 5px solid $basecolor
 
   p
     font-size: 15px
